--- a/WEB_253504_Novikov.UI/Views/Shared/_MenuPartial.cshtml
+++ b/WEB_253504_Novikov.UI/Views/Shared/_MenuPartial.cshtml
@@ -7,6 +7,6 @@
 <div class="navbar-nav">
 	<a class="navbar-brand" href="#">WEB_253504_Novikov</a>
 	<a asp-controller="Home" asp-action="Index" class="nav-item nav-link @(controller=="home"?"active":"")">Лб 1</a>
-	<a asp-controller="Product" asp-action="Index" class="nav-item nav-link @(controller=="product"?"active":"")">Каталог</a>
+	<a asp-controller="VehicleCatalog" asp-action="Index" class="nav-item nav-link @(controller=="product"?"active":"")">Каталог</a>
 	<a asp-area="Admin" asp-page="/Index" class="nav-item nav-link">Администрирование</a>
 </div>
