--- a/WEB_253504_Novikov.UI/Views/_ViewImports.cshtml
+++ b/WEB_253504_Novikov.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WEB_253504_Novikov.UI
+@using WEB_253504_Novikov.Domain
 @using WEB_253504_Novikov.UI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
