--- a/WEB_253504_Novikov.UI/Areas/Admin/Pages/_ViewImports.cshtml
+++ b/WEB_253504_Novikov.UI/Areas/Admin/Pages/_ViewImports.cshtml
@@ -5,3 +5,4 @@
 @using WEB_253504_Novikov.UI.Components
 @using WEB_253504_Novikov.UI.Areas.Admin.Pages.VehiclePages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WEB_253504_Novikov.UI
