--- a/WEB_253504_Novikov.UI/Areas/Admin/Pages/VehiclePages/Edit.cshtml
+++ b/WEB_253504_Novikov.UI/Areas/Admin/Pages/VehiclePages/Edit.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    var defaultImage = Url.Content("~/Images/no-image.png");
 }
 
 <h1>Edit</h1>
@@ -48,7 +49,17 @@
                 </select>
             </div>
             <div class="form-group">
-                <label class="control-label">Image</label>
+                <label class="control-label">Image</label><br />
+                @{
+                    if (Model.Vehicle.ImagePath == null || Model.Vehicle.ImagePath == string.Empty)
+                    {
+                        <img src="@defaultImage" style="height: 6rem" />
+                    }
+                    else
+                    {
+                        <img src="@Model.Vehicle.ImagePath" style="height: 6rem" />
+                    }
+                }
                 <div class="input-group">
                     <input asp-for="Image" type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
                 </div>
