--- a/WEB_253504_Novikov.UI/Areas/Admin/Pages/VehiclePages/Index.cshtml
+++ b/WEB_253504_Novikov.UI/Areas/Admin/Pages/VehiclePages/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    var defaultImage = Url.Content("~/Images/no-image.png");
 }
 
 <h1>Index</h1>
@@ -54,7 +55,16 @@
             </td>
             <td>
                 @* @Html.DisplayFor(modelItem => item.ImagePath) *@
-                <img src="@item.ImagePath" style="height: 6rem"/>
+                    @{
+                        if (item.ImagePath == null || item.ImagePath == string.Empty)
+                        {
+                            <img src="@defaultImage" style="height: 6rem" />
+                        }
+                        else{
+                            <img src="@item.ImagePath" style="height: 6rem" />
+                        }
+                    }
+                    
             </td>
             @* <td>
                 @Html.DisplayFor(modelItem => item.ImageMime)
@@ -71,7 +81,7 @@
     
 </table>
 <nav aria-label="Page navigation example">
-    <ul class="pagination">
+    @* <ul class="pagination">
         <li class="page-item">
             <a class="page-link"
                aria-label="Previous"
@@ -99,5 +109,10 @@
                 <span aria-hidden="true">&raquo;</span>
             </a>
         </li>
-    </ul>
+    </ul> *@
+    <pager current-page="@Model.Vehicles.CurrentPage"
+        total-pages="@Model.Vehicles.TotalPages"
+        admin="true">
+
+    </pager>
 </nav>
