--- a/WEB_253504_Novikov.UI/Views/_ViewImports.cshtml
+++ b/WEB_253504_Novikov.UI/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using WEB_253504_Novikov.Domain.Models
 @using WEB_253504_Novikov.UI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, WEB_253504_Novikov.UI
