--- a/WEB_253504_Novikov.UI/Views/VehicleCatalog/Index.cshtml
+++ b/WEB_253504_Novikov.UI/Views/VehicleCatalog/Index.cshtml
@@ -13,77 +13,41 @@
         return returnUrl;
     }
 }
-
-@* <!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>VehicleCatalog</title>
-</head>
-<body> *@
-    <!-- выбор категории -->
-    <div class="col-2 border-2">
-        <ul class="nav ">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle"
-                   data-bs-toggle="dropdown"
-                   role="button"
-                   aria-expanded="false">
-                    @ViewData["currentVehicleType"]
-                </a>
-                <ul class="dropdown-menu">
+<!-- выбор категории -->
+<div class="col-2 border-2">
+    <ul class="nav ">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                role="button"
+                aria-expanded="false">
+                @ViewData["currentVehicleType"]
+            </a>
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item"
+                        asp-controller="VehicleCatalog"
+                        asp-route-vehicleType=@null>¬се</a>
+                </li>
+                @foreach (var item in Model.CategoriesResponse.Data)
+                {
                     <li>
                         <a class="dropdown-item"
-                           asp-controller="VehicleCatalog"
-                           asp-route-vehicleType=@null>¬се</a>
+                            asp-controller="VehicleCatalog"
+                            asp-action="Index"
+                            asp-route-vehicleType="@item.NormalizedName">
+                            @item.Name
+                        </a>
                     </li>
-                    @foreach (var item in Model.CategoriesResponse.Data)
-                    {
-                        <li>
-                            <a class="dropdown-item"
-                               asp-controller="VehicleCatalog"
-                               asp-action="Index"
-                               asp-route-vehicleType="@item.NormalizedName">
-                                @item.Name
-                            </a>
-                        </li>
-                    }
-                </ul>
-            </li>
-        </ul>
-    </div><!-- выбор категории -->
-    <div id="productListContainer" class="d-flex flex-wrap">
-        @foreach (var item in Model.ProductsResponse.Data.Items)
-        {
-            <div class="card m-2" style="width: 20rem; height: 26rem">
-                @{
-                    if (item.ImagePath == null || item.ImagePath == string.Empty)
-                    {
-                        <img src="@defaultImage" class="card-img-top" style="height: 12rem; object-fit: cover">
-                    }
-                    else
-                    {
-                        <img src="@item.ImagePath" class="card-img-top" style="height: 12rem; object-fit: cover">
-                    }
                 }
-                <div class="card-body">
-                    <h5 class="card-title">@item.Name</h5>
-                    <p class="card-text">@item.Description</p>
-                    <p class="card-text">@item.Cost</p>
-                </div>
-                <div class="card-footer d-flex justify-content-center">
-                <a class="btn btn-primary" asp-controller="Cart" asp-action="Add" asp-route-id="@item.Id" asp-route-returnurl="@GetReturnUrl()">Add to cart</a>
-                </div>
-            </div>
-        }
-    </div>
-    @await Component.InvokeAsync("PaginationComponent", 
-    new PaginationModel
-    {
-        CurrentVehicleTypeNormalizedName = ViewData["currentVehicleTypeNormalized"] as string,
-        CurrentPage = Model.ProductsResponse.Data.CurrentPage,
-        TotalPages = Model.ProductsResponse.Data.TotalPages
-    })
-@*</body>
-</html>*@
+            </ul>
+        </li>
+    </ul>
+</div><!-- выбор категории -->
+
+@* <partial name="~/Views/Shared/_CatalogPartial.cshtml" model="@Model"/> *@
+@await Html.PartialAsync("~/Views/Shared/_CatalogPartial.cshtml", Model)
+
+@section Scripts {
+    <script src="~/scripts/site.js"></script>
+}
