--- a/WEB_253504_Novikov.UI/Views/Home/Index.cshtml
+++ b/WEB_253504_Novikov.UI/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model ListDemo
-@{
+﻿@{
 
     ViewBag.Title = "Index";
 }
@@ -19,7 +18,7 @@
 </div>
 
 
-<h1>@Model.Name</h1>
+@* <h1>@Model.Name</h1> *@
 
 
 <h2>Форма</h2>
